maj du message panel .. ajout de l itération ^^

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -85,6 +85,7 @@ timeElapsedMessage=<b>Temps pass&eacute; :</b>
 timeRemainingMessage=<b>Temps restant :</b>
 activityRole=<b>Rôle</b>
 activityActivity=<b>Activité</b>
+activityIteration=<b>Itération</b>
 welcomeMessage=<b>Bienvenue</b> !<br> Je suis <b>Pagod</b> votre assistant personnel !<br> Je suis là pour vous aider dans la réalisation de votre travail !
 openedProcessMessage=Choisissez <b>l'activité</b> pour laquelle vous souhaitez que je vous assiste.
 activityPresentationMessage=Voici la <b>description globale</b> de l'activité !<br> Elle va vous permettre d'avoir une vue d'ensemble sur le travail à faire.
