--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -88,6 +88,7 @@ welcomeMessage=<b>Welcome</b> !<br> I'm <b>Pagod</b> your personnal wizard !<br>
 openedProcessMessage=Choose <b>the activity</b> you want to realize.
 activityRole=<b>Role</b>
 activityActivity=<b>Activity</b>
+activityIteration=<b>Iteration</b>
 activityPresentationMessage=Here is the <b>Global desciption</b> of this activity !<br> Thanks to that you can have a general view of your job.
 activityCheckListMessage=Before you begin, I advise you to <b>check this points</b>.
 activityEndCheckListMessage=You have done this activity, I advise you to check if you have <b>realize the following products</b>!
