--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -171,6 +171,10 @@ TimeActivityColumnNameActivity=Activity
 EditTimeException=Value you have written is not valid, it must be like this h:m:s
 EditTimeErrorTitle=Time modification error
 
+#TimeActivityAllIterationsDialog
+TimeActivityAllIterationsDialogTitle=Elapsed time since beginning of the project
+TimeActivityColumnNameTimeElapsedIterations=Iteration  
+
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=No guidance available for this product.
 
