--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -165,10 +165,14 @@ ToolsSettingsTitle=Configuration des outils
 TimeActivityDialogTitle=Temps passés sur l'itération courante
 TimeEditDialogTitle=Temps pour l'activité
 TimeActivityColumnNameTimeElapsed=Temps passé
-TimeActivityColumnNameTimeRemaining=Temps prévu
+TimeActivityColumnNameTimeRemaining=Temps restant
 TimeActivityColumnNameActivity=Activité
 EditTimeException=La valeur que vous avez indiqué n'est pas valide, ce doit être de la forme h:m:s
 EditTimeErrorTitle=Erreur dans la modification du temps
+
+#TimeActivityAllIterationsDialog
+TimeActivityAllIterationsDialogTitle=Temps passés depuis le début du projet
+TimeActivityColumnNameTimeElapsedIterations=Itération 
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
