mis a jour des fichiers ressources pour l'iteration

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -230,3 +230,7 @@ TimeEditDialogTitle=Edition des temps de l'activité
 #Workspace
 WorkspaceException=L'espace de travail n'a pas été défini ou bien le chemin choisi est invalide.
 WorkspaceErrorTitle=Erreur
+
+#Iteration
+NewIteration=Vous venez de passer dans une nouvelle itération
+NewIterationTitle=Nouvelle itération
