--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -231,3 +231,7 @@ TimeEditDialogTitle=Edit Activity Time
 #Workspace
 WorkspaceException=The workspace is not chosen or the path chosen is invalid.
 WorkspaceErrorTitle=Error
+
+#Iteration
+NewIteration=You have just passed in a new iteration
+NewIterationTitle=New iteration 
