--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -61,13 +61,18 @@ postConditions = Post-Conditions check-up
 
 #CheckPane
 CheckRoleLabel=ROLE : 
+CheckProductLabel=You must have the following product :
 CheckProductsLabel=You must have the following products :
+CheckToolLabel=You must have the following tool :
 CheckToolsLabel=You must have the following tools :
-CheckGuidancesLabel=Available guidance(s) for this activity :
+CheckGuidanceLabel=Available guidance for this activity :
+CheckGuidancesLabel=Available guidances for this activity :
 
 #EndCheckPanel
+CheckOutputProductLabel=You should have realize the following product :
 CheckOutputProductsLabel=You should have realize the following product(s) :
-CheckListLabel=Available Checklist(s) for this activity :
+CheckListLabel=Available Checklist for this activity :
+CheckListsLabel=Available Checklists for this activity :
 
 #ProcessPane Message
 noContentActivity=There is no description for this activity.
