--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -61,13 +61,18 @@ postConditions = Vérification des post-conditions
 
 #CheckPane
 CheckRoleLabel=ROLE : 
+CheckProductLabel=Vous devez disposer du produit suivant :
 CheckProductsLabel=Vous devez disposer des produits suivants :
+CheckToolLabel=Vous devez disposer de l'outil suivant :
 CheckToolsLabel=Vous devez disposer des outils suivants :
+CheckGuidanceLabel=Guide disponible sur cette activité :
 CheckGuidancesLabel=Guides disponibles sur cette activité :
 
 #EndCheckPanel
-CheckOutputProductsLabel=Vous devez avoir réalisé le(s) produit(s) suivant(s) :
-CheckListLabel=Liste(s) de contrôles disponible(s) sur cette activité :
+CheckOutputProductLabel=Vous devez avoir réalisé le produit suivant :
+CheckOutputProductsLabel=Vous devez avoir réalisé les produits suivants :
+CheckListLabel=Liste de contrôles disponible sur cette activité :
+CheckListsLabel=Listes de contrôles disponibles sur cette activité :
 
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
