--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -34,6 +34,11 @@ timeActivityAllIteration=Consult elapsed time since the beginning of the project
 # AboutFrame
 aboutFrameTitle=About PAGOD
 
+# OpenProcessAction
+openProcessActionMsgErreurTitle=Problème de suppression du fichier processus
+openProcessActionMsgErreurBody1=Le fichier processus
+openProcessActionMsgErreurBody2=n'a pas put être supprimer. Veuillez le supprimer à la main.
+
 # ProcessFileChooser
 processFileChooserTitle=Open a process
 processFileChooserFilterDPCorPAGOD=DPC or PAGOD process (*.dpc, *.pagod)
