--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -34,6 +34,11 @@ timeActivityAllIteration=Consulter les temps passés depuis le &début du projet
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD
 
+# OpenProcessAction
+openProcessActionMsgErreurTitle=Problème de suppression du fichier processus
+openProcessActionMsgErreurBody1=Le fichier processus
+openProcessActionMsgErreurBody2=n'a pas put être supprimer. Veuillez le supprimer à la main.
+
 # ProcessFileChooser
 processFileChooserTitle=Ouvrir un processus
 processFileChooserFilterDPCorPAGOD=processus DPC ou PAGOD (*.dpc, *.pagod)
