Corrections pour alex

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -37,7 +37,7 @@ aboutFrameTitle=A propos de PAGOD
 # OpenProcessAction
 openProcessActionMsgErreurTitle=Problème de suppression du fichier processus
 openProcessActionMsgErreurBody1=Le fichier processus
-openProcessActionMsgErreurBody2=n'a pas put être supprimer. Veuillez le supprimer à la main.
+openProcessActionMsgErreurBody2=n'a pas pu être supprimé. Veuillez le supprimer à la main.
 
 # ProcessFileChooser
 processFileChooserTitle=Ouvrir un processus
