--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -35,9 +35,9 @@ timeActivityAllIteration=Consult elapsed time since the beginning of the project
 aboutFrameTitle=About PAGOD
 
 # OpenProcessAction
-openProcessActionMsgErreurTitle=Problème de suppression du fichier processus
-openProcessActionMsgErreurBody1=Le fichier processus
-openProcessActionMsgErreurBody2=n'a pas put être supprimer. Veuillez le supprimer à la main.
+openProcessActionMsgErreurTitle=Problem while deleting process file
+openProcessActionMsgErreurBody1=Process file
+openProcessActionMsgErreurBody2=could not be deleted. Delete it manually.
 
 # ProcessFileChooser
 processFileChooserTitle=Open a process
