Modification du configurateur vol 2 (RolesPanel)

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
@@ -25,6 +25,11 @@ browseButtonLabel=Parcourir
 #tabs
 stepsTab=Etapes
 toolsTab=Outils
+rolesTab=Rôles
+RolesPanelColumnRoleName=Nom
+RolesPanelColumnRoleState=Etat
+ExportButtonLabel=Exporter
+CancelButtonLabel=Annuler
 
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD configurator
