Ajout des fichiers de ressources

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
@@ -83,6 +83,7 @@ StepsPanelExportStepsAsHtmlTooltip=Export des étapes vers un fichier HTML
 StepsPanelExportStepsDialogTitle=Export HTML
 StepsPanelExportStepsOkMessage=Le fichier %1$2s a été exporté avec succès
 StepsPanelExportStepsFailureMessage=Export du fichier %1$2s impossible
+StepsPanelOverview=Prévisualisation de l'étape sélectionnée
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus
@@ -173,3 +174,9 @@ CSSClassChooser_dialogTitle=Choix des classes de style
 CSSClassChooser_description=Choisissez les classes de style à identifier:
 CSSClassChooser_titleClass=Classe des titres:
 CSSClassChooser_bodyClass=Classe des contenus:
+
+#OverviewFrame
+OverviewFrame_frameTitle=Prévisualisation de l'étape
+OverviewFrame_stepName=Nom de l'étape
+OverviewFrame_stepContent=Contenu
+OverviewFrame_stepProducts=Produits
