--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -78,6 +78,7 @@ StepsPanelExportStepsAsHtmlTooltip=Export activity's steps into an HTML file
 StepsPanelExportStepsDialogTitle=HTML export
 StepsPanelExportStepsOkMessage=%1$2s sucessfully exported
 StepsPanelExportStepsFailureMessage=%1$2s can't be exported
+StepsPanelOverview=Overview of the chosen step
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD is a personal assistant made to help you using a process
@@ -167,3 +168,9 @@ CSSClassChooser_dialogTitle=Style classes choice
 CSSClassChooser_description=Choose style class to identify:
 CSSClassChooser_titleClass=Title class:
 CSSClassChooser_bodyClass=Content class:
+
+#OverviewFrame
+OverviewFrame_frameTitle=Overview of the step
+OverviewFrame_stepName=Step name
+OverviewFrame_stepContent=Content
+OverviewFrame_stepProducts=Products
