Dernieres correction par rapport au bouton de prévisualisation

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
@@ -84,6 +84,8 @@ StepsPanelExportStepsDialogTitle=Export HTML
 StepsPanelExportStepsOkMessage=Le fichier %1$2s a été exporté avec succès
 StepsPanelExportStepsFailureMessage=Export du fichier %1$2s impossible
 StepsPanelOverview=Prévisualisation de l'étape sélectionnée
+StepsPanelOverview_WarningMessageTitle=Aucune étape n'a été sélectionnée
+StepsPanelOverview_WarningMessage=Prévisualisation d'une étape
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus
