--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -78,7 +78,9 @@ StepsPanelExportStepsAsHtmlTooltip=Export activity's steps into an HTML file
 StepsPanelExportStepsDialogTitle=HTML export
 StepsPanelExportStepsOkMessage=%1$2s sucessfully exported
 StepsPanelExportStepsFailureMessage=%1$2s can't be exported
-StepsPanelOverview=Overview of the chosen step
+StepsPanelOverview=Step Overview
+StepsPanelOverview_WarningMessageTitle=No step has been chosen
+StepsPanelOverview_WarningMessage=Step Overview
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD is a personal assistant made to help you using a process
@@ -170,7 +172,7 @@ CSSClassChooser_titleClass=Title class:
 CSSClassChooser_bodyClass=Content class:
 
 #OverviewFrame
-OverviewFrame_frameTitle=Overview of the step
+OverviewFrame_frameTitle=Step Overview
 OverviewFrame_stepName=Step name
 OverviewFrame_stepContent=Content
 OverviewFrame_stepProducts=Products
