Correction Overview de step => gestion pluriels dans les labels

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -175,4 +175,5 @@ CSSClassChooser_bodyClass=Content class:
 OverviewFrame_frameTitle=Step Overview
 OverviewFrame_stepName=Step name
 OverviewFrame_stepContent=Content
-OverviewFrame_stepProducts=Products
+OverviewFrame_stepProduct=Output Product
+OverviewFrame_stepProducts=Output Products
