--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
@@ -176,4 +176,5 @@ CSSClassChooser_bodyClass=Classe des contenus:
 OverviewFrame_frameTitle=Prévisualisation de l'étape
 OverviewFrame_stepName=Nom de l'étape
 OverviewFrame_stepContent=Contenu
-OverviewFrame_stepProducts=Produits
+OverviewFrame_stepProduct=Produit de sortie
+OverviewFrame_stepProducts=Produits de sortie
