--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -243,5 +243,7 @@ WorkspaceException=The workspace is not chosen or the path chosen is invalid.
 WorkspaceErrorTitle=Error
 
 #Iteration
-NewIteration=You have just passed in a new iteration
+NewIteration=You have just passed in the iteration :
 NewIterationTitle=New iteration 
+ChangeIteration=Do you wish to change iteration? 
+ChangeIterationTitle=Change of iteration 
