--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -242,5 +242,7 @@ WorkspaceException=L'espace de travail n'a pas été défini ou bien le chemin choi
 WorkspaceErrorTitle=Erreur
 
 #Iteration
-NewIteration=Vous venez de passer dans une nouvelle itération
+NewIteration=Vous venez de passer dans l'itération :
 NewIterationTitle=Nouvelle itération
+ChangeIteration=Souhaitez-vous changer d'iteration ?
+ChangeIterationTitle=Changement d'iteration
