Modification du configurateur vol 3 (RolesDialog)

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
@@ -12,6 +12,7 @@ file=&Fichier
 open=&Ouvrir
 save=&Enregistrer
 saveAs=Enregistrer &sous
+export=E&xporter
 quit=&Quitter
 ?=&?
 preferences=&Préférences
@@ -25,11 +26,6 @@ browseButtonLabel=Parcourir
 #tabs
 stepsTab=Etapes
 toolsTab=Outils
-rolesTab=Rôles
-RolesPanelColumnRoleName=Nom
-RolesPanelColumnRoleState=Etat
-ExportButtonLabel=Exporter
-CancelButtonLabel=Annuler
 
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD configurator
@@ -97,6 +93,13 @@ aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser <a href="
 PreferencesDialogTitle=Configuration des préférences
 LanguageTabTitle=Langue
 ExtensionTabTitle=Extension
+
+#RolesDialog
+RolesDialogTitle=Configuration des rôles
+RolesPanelColumnRoleName=Nom
+RolesPanelColumnRoleState=Etat
+ExportButtonLabel=Exporter
+CancelButtonLabel=Quitter
 
 #LanguageChooserPanel
 langueMessage=Choix de la langue :
