Mise a jour des labels

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -47,6 +47,7 @@ processFileChooserFilterPAGOD=processus PAGOD (*.pagod)
 
 # WorkspaceFileChooser
 workspaceFileChooserTitle=Choisir un répertoire de travail
+workspaceMessage=Chemin d'acces au Workspace
 
 #ContentViewerPane
 seeFileOfContents=Voir le descriptif.
@@ -56,6 +57,15 @@ RolesChooserDialogTitle=Choisissez vos roles.
 OKButtonLabel=Valider
 CancelButtonLabel=Annuler
 BrowseButtonLabel=Parcourir
+
+# ColorPanel
+colorAFMessage=Couleur d'une activité Terminée
+changeColorButton=Changer la couleur...
+colorASMessage=Couleur d'une activité Suspendue
+
+# JColorChooser
+ATJColorChooserTitle=Couleur d'une Action Terminee
+AFJColorChooserTitle=Couleur d'une Action Suspendue
 
 #StepPanel
 noComment=Aucun descriptif n'a été défini pour cette étape.
@@ -108,6 +118,7 @@ presentProductsMessage=Voila les <b>produits</b> à réaliser ou à modifier.<br> S
 PreferencesDialogTitle=Configuration des préférences
 LanguageTabTitle=Langue
 ExtensionTabTitle=Extension
+ColorTabTitle=Couleur
 
 #LanguageChooserPanel
 langueMessage=Choix de la langue :
