--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -47,6 +47,7 @@ processFileChooserFilterPAGOD=PAGOD process (*.pagod)
 
 # WorkspaceFileChooser
 workspaceFileChooserTitle=Choose a work directory
+workspaceMessage=Workspace Directory
 
 #ContentViewerPane
 seeFileOfContents=See description
@@ -56,6 +57,15 @@ RolesChooserDialogTitle="Choose your roles"
 OKButtonLabel=OK
 CancelButtonLabel=Cancel
 BrowseButtonLabel=Browse
+
+# ColorPanel
+colorAFMessage=Color of a Terminated Activity
+changeColorButton=Change color...
+colorASMessage=Color of a Suspended Activity
+
+# JColorChooser
+ATJColorChooserTitle=Color of a Terminated Activity
+AFJColorChooserTitle=Color of a Suspended Activity
 
 #StepPanel
 noComment=There are no description for this step.
@@ -109,6 +119,7 @@ presentProductsMessage=Here are the <b>products</b> you will have to realize or 
 PreferencesDialogTitle=Preferences
 LanguageTabTitle=Language
 ExtensionTabTitle=Extensions
+ColorTabTitle=Color
 
 #LanguageChooserPanel
 langueMessage=Language choice :
