--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -81,6 +81,9 @@ StepsPanelExportStepsFailureMessage=%1$2s can't be exported
 StepsPanelOverview=Step Overview
 StepsPanelOverview_WarningMessageTitle=No step has been chosen
 StepsPanelOverview_WarningMessage=Step Overview
+StepsPanelPagodEditor=Step Content Edition
+StepsPanelPagodEditor_WarningMessageTitle=No step has been chosen
+StepsPanelPagodEditor_WarningMessage=Step Content Edition
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD is a personal assistant made to help you using a process
