--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
@@ -81,9 +81,9 @@ StepsPanelExportStepsFailureMessage=Export du fichier %1$2s impossible
 StepsPanelOverview=Prévisualisation de l'étape sélectionnée
 StepsPanelOverview_WarningMessageTitle=Aucune étape n'a été sélectionnée
 StepsPanelOverview_WarningMessage=Prévisualisation d'une étape
-StepsPanelPagodEditor=Edition du contenu d'une étape
+StepsPanelPagodEditor=Editer le contenu d'une étape
 StepsPanelPagodEditor_WarningMessageTitle=Aucune étape n'a été sélectionnée
-StepsPanelPagodEditor_WarningMessage=Edition du contenu d'une étape
+StepsPanelPagodEditor_WarningMessage=Pagod Editor
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus
