Corrections Pagod Editor

--- a/PAGOD/src/resources/languages/editor/LanguageResources_fr_FR.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources_fr_FR.properties
@@ -186,3 +186,4 @@ ViewToolbarMain=Principal
 ViewToolbarStyles=Styles
 ViewToolbars=Barres d'outil
 WhatTags=Liste des balises
+SaveToPagod=Enregistrer vers Pagod
