Corrections Pagod Editor

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator.properties
@@ -82,15 +82,16 @@ StepsPanelExportStepsFailureMessage=Export du fichier %1$2s impossible
 StepsPanelOverview=Prévisualisation de l'étape sélectionnée
 StepsPanelOverview_WarningMessageTitle=Aucune étape n'a été sélectionnée
 StepsPanelOverview_WarningMessage=Prévisualisation d'une étape
-StepsPanelPagodEditor=Editer le contenu d'une étape
+StepsPanelPagodEditor=Editer le contenu d'une étape avec PAGOD Editor
 StepsPanelPagodEditor_WarningMessageTitle=Aucune étape n'a été sélectionnée
-StepsPanelPagodEditor_WarningMessage=Pagod Editor
+StepsPanelPagodEditor_WarningMessage=PAGOD Editor
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus
 aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>Tous droits réservés</center></html>
 aboutDialogAuthors=<html>Auteurs:<ul><li>M1: Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>L3: Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li></ul></html>
-aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li></ul></html>
+aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>Ekit <a href="http://www.hexidec.com/ekit.php/">http://www.hexidec.com/ekit.php</a></li></ul></html>
+aboutEditorWhatIsPagodEditorDialog=PAGOD Editor est un editeur de texte html pour Pagod
 
 #PreferencesDialog
 PreferencesDialogTitle=Configuration des préférences
