--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -81,15 +81,16 @@ StepsPanelExportStepsFailureMessage=%1$2s can't be exported
 StepsPanelOverview=Step Overview
 StepsPanelOverview_WarningMessageTitle=No step has been chosen
 StepsPanelOverview_WarningMessage=Step Overview
-StepsPanelPagodEditor=Edit Step Content
+StepsPanelPagodEditor=Edit Step Content with PAGOD Editor
 StepsPanelPagodEditor_WarningMessageTitle=No step has been chosen
-StepsPanelPagodEditor_WarningMessage=Pagod Editor
+StepsPanelPagodEditor_WarningMessage=PAGOD Editor
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD is a personal assistant made to help you using a process
 aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>All rights reserved</center></html>
 aboutDialogAuthors=<html>Authors:<ul><li>M1 : Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>L3: Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li></ul></html>
-aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li></ul></html>
+aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>Ekit <a href="http://www.hexidec.com/ekit.php/">http://www.hexidec.com/ekit.php</a></li></ul></html>
+aboutEditorWhatIsPagodEditorDialog=PAGOD Editor is an html text editor for Pagod
 
 #PreferencesDialog
 PreferencesDialogTitle=Preferences
