--- a/PAGOD/src/resources/languages/editor/LanguageResources_en_EN.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources_en_EN.properties
@@ -105,7 +105,7 @@ Heading4=Heading 4
 Heading5=Heading 5
 Heading6=Heading 6
 Heading=Heading
-Help=Help
+Help=?
 ImageDialogTitle=Select Image To Insert
 ImageURLDialogTitle=Enter Image URL
 Index=Index
