--- a/PAGOD/src/resources/languages/editor/LanguageResources_fr_FR.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources_fr_FR.properties
@@ -105,7 +105,7 @@ Heading4=Entête 4
 Heading5=Entête 5
 Heading6=Entête 6
 Heading=Entête
-Help=Aide
+Help=?
 ImageDialogTitle=Choisir une image à insérer
 Index=Index
 Insert=Insertion
