--- a/PAGOD/src/resources/languages/editor/LanguageResources.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources.properties
@@ -106,7 +106,7 @@ Heading4=Heading 4*
 Heading5=Heading 5*
 Heading6=Heading 6*
 Heading=Heading*
-Help=Help*
+Help=?
 IconExtension=HK.gif
 ImageDialogTitle=Select Image To Insert*
 ImageURLDialogTitle=Enter Image URL*
@@ -191,3 +191,4 @@ ViewToolbarMain=Main*
 ViewToolbarStyles=Styles*
 ViewToolbars=Toolbars*
 WhatTags=What Tags?*
+SaveToPagod=Save To Pagod
