Affichage du temps en hh:mm (sans les secondes donc) dans les fenetres de temps (pas de modif sur le chronometre qui defile pendant une activité)

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -188,7 +188,7 @@ TimeEditDialogTitle=Temps pour l'activité
 TimeActivityColumnNameTimeElapsed=Temps passé
 TimeActivityColumnNameTimeRemaining=Temps restant
 TimeActivityColumnNameActivity=Activité
-EditTimeException=La valeur que vous avez indiqué n'est pas valide, ce doit être de la forme h:m:s
+EditTimeException=La valeur que vous avez indiqué n'est pas valide, ce doit être de la forme hh:mm
 EditTimeErrorTitle=Erreur dans la modification du temps
 
 #TimeActivityAllIterationsDialog
