--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -189,7 +189,7 @@ TimeEditDialogTitle=Passed or estimated time on activity
 TimeActivityColumnNameTimeElapsed=Elapsed time
 TimeActivityColumnNameTimeRemaining=Remaining time
 TimeActivityColumnNameActivity=Activity
-EditTimeException=Value you have written is not valid, it must be like this h:m:s
+EditTimeException=Value you have written is not valid, it must be like this hh:mm
 EditTimeErrorTitle=Time modification error
 
 #TimeActivityAllIterationsDialog
