--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -86,11 +86,11 @@ StepsPanelPagodEditor_WarningMessageTitle=No step has been chosen
 StepsPanelPagodEditor_WarningMessage=PAGOD Editor
 
 #AboutDialog
-aboutDialogWhatIsPagod=PAGOD is a personal assistant made to help you using a process
-aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>All rights reserved</center></html>
-aboutDialogAuthors=<html>Authors:<ul><li>M1 : Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>L3: Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li></ul></html>
-aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>Ekit <a href="http://www.hexidec.com/ekit.php/">http://www.hexidec.com/ekit.php</a></li></ul></html>
-aboutEditorWhatIsPagodEditorDialog=PAGOD Editor is an html text editor for Pagod
+aboutDialogWhatIsPagod=PAGOD configurator is a processus configurator.
+aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>All rights reserved.<br> Software under GPL <br><br>Pagod is a part of apes suite (<a href="http://www.apes-project.org/">http://www.apes-project.org/</a>). </center></html>
+aboutDialogAuthors=<html>Authors:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>M1 (2005-2006): Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li><li>L3: Sebastien Balard, Frédéric Becquier, Arnaud Giuliani, Pierre Pettera, Florian Piquemal</li></ul></html>
+aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li></ul></html>
+
 
 #PreferencesDialog
 PreferencesDialogTitle=Preferences
