--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -96,7 +96,7 @@ noContentComponent=Aucun descriptif n'a été défini pour ce composant processus.
 
 #AboutDialog
 aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus
-aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>Tous droits réservés.<br>Logiciel sous licence GPL<br><br>Pagod fait parti de la suite Apes (<a href="http://apes2.berlios.de/">http://apes2.berlios.de/</a>).</center></html>
+aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>Tous droits réservés.<br>Logiciel sous licence GPL<br><br>Pagod fait parti de la suite Apes (<a href="http://www.apes-project.org/">http://www.apes-project.org/</a>).</center></html>
 aboutDialogAuthors=<html>Auteurs:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>M1 (2005-2006): Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li><li>L3: Sebastien Balard, Frédéric Becquier, Arnaud Giuliani, Pierre Pettera, Florian Piquemal</li></ul></html>
 aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li></ul></html>
 
