mise a jour des libellés

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_en.properties
@@ -97,6 +97,13 @@ PreferencesDialogTitle=Preferences
 LanguageTabTitle=Language
 ExtensionTabTitle=Extensions
 
+#RolesDialog
+RolesDialogTitle=Role configuration
+RolesPanelColumnRoleName=Name
+RolesPanelColumnRoleState=State
+RolesExportButtonLabel=Export
+RolesCancelButtonLabel=Cancel
+
 #LanguageChooserPanel
 langueMessage=Language choice :
 infoChangeLanguage=The language changes will take effect the next time you launch the application.
