--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
@@ -97,6 +97,13 @@ PreferencesDialogTitle=Configuration des préférences
 LanguageTabTitle=Langue
 ExtensionTabTitle=Extension
 
+#RolesDialog
+RolesDialogTitle=Configuration des rôles
+RolesPanelColumnRoleName=Nom
+RolesPanelColumnRoleState=Etat
+RolesExportButtonLabel=Exporter
+RolesCancelButtonLabel=Annuler
+
 #LanguageChooserPanel
 langueMessage=Choix de la langue :
 infoChangeLanguage=Le changement de la langue sera pris en compte lors du prochain démarrage de l'application !
