Corrections PAGOD EDITOR / TAbleau et sauvegarde

--- a/PAGOD/src/resources/languages/editor/LanguageResources_en_EN.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources_en_EN.properties
@@ -188,3 +188,5 @@ ViewToolbarStyles=Styles
 ViewToolbars=Toolbars
 WhatTags=What Tags?
 SaveToPagod=Save To Pagod
+Width=Width
+SaveBeforeQuit=Save Before Exit ?
