--- a/PAGOD/src/resources/languages/editor/LanguageResources_fr_FR.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources_fr_FR.properties
@@ -164,8 +164,8 @@ SelectorToolUnicodePage=Page:
 Serialize=Sérialiser
 Table=Tableau
 TableBorder=Bordures du Tableau
-TableCellPadding=Cell Padding
-TableCellSpacing=Cell Spacing
+TableCellPadding=Remplissage De Cellules
+TableCellSpacing=Espacement De Cellules 
 TableColumns=Colonnes du Tableau
 TableDialogTitle=Propriétés du Tableau
 TableRows=Rangées du Tableau
@@ -187,3 +187,5 @@ ViewToolbarStyles=Styles
 ViewToolbars=Barres d'outil
 WhatTags=Liste des balises
 SaveToPagod=Enregistrer vers Pagod
+Width=Largeur
+SaveBeforeQuit=Sauvegarder avant de quitter ?
