--- a/PAGOD/src/resources/languages/editor/LanguageResources.properties
+++ b/PAGOD/src/resources/languages/editor/LanguageResources.properties
@@ -191,4 +191,6 @@ ViewToolbarMain=Main*
 ViewToolbarStyles=Styles*
 ViewToolbars=Toolbars*
 WhatTags=What Tags?*
-SaveToPagod=Save To Pagod
+SaveToPagod=Save To Pagod*
+Width=Width*
+SaveBeforeQuit=Save Before Exit ?*
