Modification pour fre en sorte que l'utilisateur puisse choisir s'il veut voir la panneau qui affiche les etapes.

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -125,6 +125,7 @@ langueMessage=Choix de la langue :
 infoChangeLanguage=Le changement de la langue sera pris en compte lors du prochain démarrage de l'application !
 titleInfoChangeLanguage=Changement de langue
 outputDirectory=Répertoire de sortie
+lblChoiceStepPanel=Afficher la liste des étapes
 
 #ViewerPanel
 ColumnNameExtension=Extension
