--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -126,6 +126,7 @@ langueMessage=Language choice :
 infoChangeLanguage=The language changes will take effect the next time you launch the application.
 titleInfoChangeLanguage=Language changing
 outputDirectory=Output directory
+lblChoiceStepPanel=Display step list
 
 #ViewerPanel
 ColumnNameExtension=Extension
