Ajout d'une action Import project commente pour le moment car il reste kk detail a regler

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -30,6 +30,7 @@ iteration=&Itération
 timeActivity=Consulter les &temps passés sur l'itération courante
 nextIteration=Passer à l'itération &suivante
 timeActivityAllIteration=Consulter les temps passés depuis le &début du projet
+importproject=Importer un projet
 
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD
