--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -30,6 +30,7 @@ iteration=&Iteration
 timeActivity=Consult elapsed time on current iteration
 nextIteration=Go to next iteration
 timeActivityAllIteration=Consult elapsed time since the beginning of the project
+importproject=Import Project
 
 # AboutFrame
 aboutFrameTitle=About PAGOD
