--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -29,6 +29,7 @@ about=&About
 iteration=&Iteration
 timeActivity=Consult elapsed time on current iteration
 nextIteration=Go to next iteration
+exportTime=Export times 
 timeActivityAllIteration=Consult elapsed time since the beginning of the project
 importproject=Import Project
 
