--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -29,6 +29,7 @@ about=&A propos
 iteration=&Itération
 timeActivity=Consulter les &temps passés sur l'itération courante
 nextIteration=Passer à l'itération &suivante
+exportTime=Exporter les temps
 timeActivityAllIteration=Consulter les temps passés depuis le &début du projet
 importproject=Importer un projet
 
