ajout de l'action performed pour l'export xml

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -260,3 +260,6 @@ NewIteration=Vous venez de passer dans l'itération :
 NewIterationTitle=Nouvelle itération
 ChangeIteration=Souhaitez-vous changer d'iteration ?
 ChangeIterationTitle=Changement d'iteration
+
+#ExportPanel
+Save=Enregistrer
