--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -261,3 +261,6 @@ NewIteration=You have just passed in the iteration :
 NewIterationTitle=New iteration 
 ChangeIteration=Do you wish to change iteration? 
 ChangeIterationTitle=Change of iteration 
+ 
+ #ExportPanel
+ Save=Save
