Correction PAGOD Editor

--- a/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
+++ b/PAGOD/src/resources/languages/configurator/pagod_configurator_fr.properties
@@ -90,7 +90,7 @@ aboutDialogWhatIsPagod=PAGOD configurateur est un configurateur de processus.
 aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>Tous droits réservés.<br>Logiciel sous licence GPL<br><br>Pagod fait parti de la suite Apes (<a href="http://www.apes-project.org/">http://www.apes-project.org/</a>).</center></html>
 aboutDialogAuthors=<html>Auteurs:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>M1 (2005-2006): Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li><li>L3: Sebastien Balard, Frédéric Becquier, Arnaud Giuliani, Pierre Pettera, Florian Piquemal</li></ul></html>
 aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li><li>Ekit <a href="http://www.hexidec.com/ekit.php/">http://www.hexidec.com/ekit.php</a></li></ul></html>
-#aboutEditorWhatIsPagodEditorDialog=PAGOD Editor est un editeur de texte html pour Pagod
+aboutEditorWhatIsPagodEditorDialog=PAGOD Editor est un editeur de texte html pour Pagod
 
 
 #PreferencesDialog
