Rajout de la suppression de projet

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -32,6 +32,7 @@ nextIteration=Passer à l'itération &suivante
 exportTime=Exporter les temps
 timeActivityAllIteration=Consulter les temps passés depuis le &début du projet
 importproject=Importer un projet
+deleteProject=Supprimer un projet
 
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD
@@ -263,3 +264,13 @@ ChangeIterationTitle=Changement d'iteration
 
 #ExportPanel
 Save=Enregistrer
+
+#DeleteProjectDialog
+deleteProjectTitle=Suppression d'un projet
+DeleteProjectBtCancel=Annuler
+DeleteProjectBtDelete=Supprimer
+DeleteProjectConfirmTitle=Suppression ?
+DeleteProjectConfirm=Voulez vous vraiment supprimer ce projet ?
+DeleteProjectErrorTitle=Erreur
+DeleteProjectError=Erreur durant la suppression du répertoire, vérifiez que vous avez les droits en écriture. 
+DeleteProjectSuccess=Le répertoire du projet a bien été supprimé.
