--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -32,6 +32,7 @@ nextIteration=Go to next iteration
 exportTime=Export times 
 timeActivityAllIteration=Consult elapsed time since the beginning of the project
 importproject=Import Project
+deleteProject=Delete project
 
 # AboutFrame
 aboutFrameTitle=About PAGOD
@@ -264,3 +265,13 @@ ChangeIterationTitle=Change of iteration
  
  #ExportPanel
  Save=Save
+ 
+ #DeleteProjectDialog
+deleteProjectTitle=Delete a project
+DeleteProjectBtCancel=Cancel
+DeleteProjectBtDelete=Delete
+DeleteProjectConfirmTitle=Delete ?
+DeleteProjectConfirm=Do you really want to delete this project ?
+DeleteProjectErrorTitle=Error
+DeleteProjectError=Error while deleting the repertory, check you have write rights.
+DeleteProjectSuccess=Repertory of the project has been deleted.
