--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -275,3 +275,10 @@ DeleteProjectConfirm=Do you really want to delete this project ?
 DeleteProjectErrorTitle=Error
 DeleteProjectError=Error while deleting the repertory, check you have write rights.
 DeleteProjectSuccess=Repertory of the project has been deleted.
+
+#ImportProject
+infoImportProject=The project has been succesfully imported.
+titleInfoImportProject=Import a project
+ImportProjectException=Error during the import process : I/O error or project already existing. The project has not been imported.
+ImportProjectErrorTitle=Import error
+ImportProjectNull=The selected repertory is not a valid project.
