--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -274,3 +274,10 @@ DeleteProjectConfirm=Voulez vous vraiment supprimer ce projet ?
 DeleteProjectErrorTitle=Erreur
 DeleteProjectError=Erreur durant la suppression du répertoire, vérifiez que vous avez les droits en écriture. 
 DeleteProjectSuccess=Le répertoire du projet a bien été supprimé.
+
+#ImportProject
+infoImportProject=Le projet a bien été importé.
+titleInfoImportProject=Import d'un projet
+ImportProjectException=Erreur durant le processus d'import : Erreur d'I/O ou projet déjà existant. Le projet n'a pas été importé.
+ImportProjectErrorTitle=Erreur dans l'import
+ImportProjectNull=Le répertoire sellectionné n'est pas un projet valide.
