Changement du libelle pour l'import d'un projet

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -50,6 +50,7 @@ processFileChooserFilterPAGOD=processus PAGOD (*.pagod)
 
 # WorkspaceFileChooser
 workspaceFileChooserTitle=Choisir un répertoire de travail
+projectFileChooserTitle=Choisir le répertoire du projet à importer
 workspaceMessage=Chemin d'acces au Workspace
 
 #ContentViewerPane
