--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -50,6 +50,7 @@ processFileChooserFilterPAGOD=PAGOD process (*.pagod)
 
 # WorkspaceFileChooser
 workspaceFileChooserTitle=Choose a work directory
+projectFileChooserTitle=Choose the directory of the project to import
 workspaceMessage=Workspace Directory
 
 #ContentViewerPane
